# eva-dtm

./: .gitignore  CMakeLists.txt  InputParse.h  README.md  config_internal.h  eva_logger.h  main.c  main.test.c  pl_thread_pthread.h
cmake/: FFMPEGConfig.cmake
include/: common.h  config_demos.h  pl_thread.h  window.h
src/: main.c  window.c  window_glfw.c  window_sdl.c
src/avermedia/: AVerCapAPI_Pro.c  avermedia_capture.c  avermedia_capture.h
